--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <svg xmlns="http://www.w3.org/2000/svg" width="1080" height="720">
-  <image href="dragon.png" width="1080" height="720" style="image-rendering: pixelated;" />
+  <text x="50%" y="18" text-anchor="middle" font-family="Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji" font-weight="bold" font-size="13" fill="#e5c07b">Commits</text>
 </svg>
